public/css/dashboard.css
/* ... */
.btn-orange:hover {
  background-color: #ed701c;
}
.btn-blue {
  background-color: #5b75b3;
}
.btn-blue:hover {
  background-color: #5880de;
}
.btn-half {
  -webkit-border-radius: 23px;
  -webkit-border-top-right-radius: 1px;
  -webkit-border-bottom-right-radius: 1px;
  -moz-border-radius: 23px;
  -moz-border-radius-topright: 1px;
  -moz-border-radius-bottomright: 1px;
  border-radius: 23px;
  border-top-right-radius: 1px;
  border-bottom-right-radius: 1px;
}
.button span {
  padding-right: 15px;
}
.btn-getnum {
  padding: 14px 30px;
  font-size: 14px;
  width: 100%;
  /*margin-top: 14px;*/
}
.btn-getnum span {
  padding-left: 4px;
  font-size: 13px;
  vertical-align: middle;
  margin-top: -3px;
}
.btn-getnum:hover {
  background-color: #888888;
}

.btn-select {
  background: none;
  outline: none;
  border: none;
  padding: 8px 20px;
  border: 1px solid #777;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.btn-cyan {
  background-color: #00ba8b;
}
.btn-gray {
  background-color: #858689;
}
.btn-group.open .dropdown-toggle {
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .4);
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .4);
}

.blur {
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
}

.pac-container {
    z-index: 99999;
}

.ui-timepicker-container {
    z-index: 10000!important;
    overflow-y: scroll!important;
}

#mobile {
    margin-left: 12px;
}

/* RDH Removes underlines from the business card details */
.clickable a:hover {
    text-decoration: none;
}
/* RBM */
.btn-disabled {
    background-color: #bbb;
    cursor: default;
}
.btn-disabled:hover {
    background-color: #bbb;
}
.btn-disabled:focus,
.btn-disabled:active:focus {
    margin: 0!important;
    outline: 0;
}


.top-space-20 {
    padding-top: 20px;
}

#qr_code_download {
    margin-left: 15px; margin-top: 5px;
}


/*******************/

